@startuml

class MatrixUrl{
    url:string
    get_params():dict
    get_path():string
    get_host():string
}

class MatrixHeader{
    revision_id: string
    storage_method: string
    path: string
    name: string
    memory_style: enum
    description: string
}

class Revision{
    id: long
     who: string
    when: DateTime
    what: string
}

class Matrix {
    header:MatrixHeader
    url:MatrixUrl
    content:  object
}
interface DataBroker{
    checkout(url) : Matrix
    checkout(url, revisionId) : Matrix
    commit(Matrix)
    revisions(url): Revision[]
    list(): MatrixHeaderHeader[]


}
Matrix  --> MatrixHeader
Matrix --> MatrixUrl
DataBroker ..> Matrix : checkout matrix
DataBroker ..> Revision: get matrix revisions
DataBroker ..> MatrixHeader: list contents




@enduml